# advent_of_code

./: CMakeLists.txt
Day1/: main.cpp
Day2/: part1.cpp  part2.cpp
f/: fsdgf.py
include/advent_of_code/: common.h  day1.h  day2.h  day3.h
src/: common.cpp  day1.cpp  day2.cpp  day3.cpp  main.cpp
